[gd_scene load_steps=6 format=3 uid="uid://bhioktw4xks6y"]

[ext_resource type="Script" path="res://Towers/RedBulletTower.gd" id="1_fibup"]
[ext_resource type="Texture2D" uid="uid://dprucpwru4i7o" path="res://kenney_tower-defense-top-down/PNG/Default size/towerDefense_tile250.png" id="1_i611d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_spm0x"]
size = Vector2(51, 42)

[sub_resource type="CircleShape2D" id="CircleShape2D_l3rnr"]
radius = 400.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtjxk"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 450
corner_radius_top_right = 450
corner_radius_bottom_right = 450
corner_radius_bottom_left = 450

[node name="RedBulletTower" type="StaticBody2D"]
script = ExtResource("1_fibup")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_spm0x")

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(32, 0)

[node name="TowerDefenseTile250" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_i611d")

[node name="Tower" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tower"]
shape = SubResource("CircleShape2D_l3rnr")

[node name="BulletContainer" type="Node" parent="."]

[node name="Area" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0.313726)
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rtjxk")

[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="body_exited" from="Tower" to="." method="_on_tower_body_exited"]
